# MathyResurrected

./: .bzrignore  AUTHORS  CMakeLists.txt  HISTORY  INSTALL  INSTALL.w32  MathyResurrected.incl  MathyResurrected.pro  README  README.mathyresurrected.txt  README.odt  TODO  mathyresurrected.sln  mathyresurrected.vcproj  mathyresurrected_resource.rc
cmake/: CMakeSetLibraryNames.cmake  CMakeUninstallTarget.cmake  cmake_uninstall.cmake.in
lib/pluginAPI/: plugin_interface.cpp
plugin/: MathyResurrectedPlugin.cpp  plugin.pro
plugin/antlr/: ComplexEval.cpp  ComplexLexer.g  README.txt  regenerate.sh
res/: mathyresurrected.qrc  mathyresurrected.rc.in
src/: CMakeLists.txt  MathyResurrectedOptionsDialog.cpp  MathyResurrectedOptionsDialog.h  MathyResurrectedPlugin.cpp  MathyResurrectedPlugin.h  OptionsDialog.cpp  OptionsDialog.h  Settings.cpp  Settings.h  config.h.in  plugin.pro
src/antlr/: ComplexEval.c  ComplexEval.g  ComplexEval.h  ComplexEval.tokens  ComplexLexer.c  ComplexLexer.cpp  ComplexLexer.g  ComplexLexer.h  ComplexLexer.tokens  ComplexParser.c  ComplexParser.cpp  ComplexParser.g  ComplexParser.h  ComplexParser.tokens  README.txt  regenerate.bat
src/evaluator/: Conversion.cpp  Conversion.h  Exceptions.cpp  Exceptions.h  MathEvaluator.cpp  MathEvaluator.h  MathTypes.h  MathyResurrectedExceptions.cpp  MathyResurrectedExceptions.h  math_bridge_API.cpp  math_bridge_API.h  math_bridge_API_types.h  math_bridge_globals.cpp  math_bridge_globals.h
test/: CMakeLists.txt  TestAppMainWindow.cpp  TestAppMainWindow.h  main.cpp  test.pro
test/testApp/: TestAppMainWindow.cpp  TestAppMainWindow.h  testApp.pro
testApp/: testApp.pro
ui/: OptionsWidget.ui  TestAppMainWindow.ui
